[gd_scene load_steps=27 format=2]

[ext_resource path="res://art/beeEnemy.png" type="Texture2D" id=1]
[ext_resource path="res://scripts/battleMode/BattleModeBeeEnemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/battleMode/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/HitBox.gd" type="Script" id=4]
[ext_resource path="res://scripts/HurtBox.gd" type="Script" id=5]
[ext_resource path="res://scripts/battleMode/enemyMovement.gd" type="Script" id=6]
[ext_resource path="res://art/big explosion.png" type="Texture2D" id=7]
[ext_resource path="res://scripts/battleMode/BulletSpawnPath.gd" type="Script" id=8]
[ext_resource path="res://audio/IslandFightReverse.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=14]
radius = 16.0

[sub_resource type="Curve2D" id=17]
_data = {
"points": PackedVector2Array( -0.028628, 1.2919, 0.028628, -1.2919, 1, -11, -2.3326, -0.967376, 2.3326, 0.967376, 4, -8, 2.23452, -0.885889, -2.23452, 0.885889, 4, -5, 1.67768, 0.987511, -1.67768, -0.987511, -2, -5, -1.85936, 1.2873, 1.85936, -1.2873, -2, -9, -0.0848745, 0.898732, 0.0848745, -0.898732, 1, -11 )
}

[sub_resource type="CircleShape2D" id=15]
radius = 16.0312

[sub_resource type="CircleShape2D" id=16]
radius = 16.0312

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 20 ), SubResource( 21 ), SubResource( 21 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=23]
_data = {
"points": PackedVector2Array( 0, 0, 0, 0, -74, 19, -10.387, -0.915327, 10.387, 0.915327, -65, 19, -18.4293, -0.631789, 18.4293, 0.631789, -25, 19, -16.5422, 0.109413, 16.5422, -0.109413, 20, 20, -15.7607, 0.518427, 15.7607, -0.518427, 58, 19, 0, 0, 0, 0, 74, 19 )
}

[node name="BattleModeBeeEnemy" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource( 2 )
bulletScene = ExtResource( 3 )
attackPatternFile = "res://scripts/attackPatternJsonData/butterflyMusicData.json"
normalMusic = ExtResource( 9 )
reverseMusic = ExtResource( 9 )

[node name="ApproachTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="bulletSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 14 )

[node name="bulletSpawnLocationY" type="Marker2D" parent="."]
position = Vector2( 0, 35 )

[node name="enemyMovement" type="Path2D" parent="."]
position = Vector2( -1, 10 )
scale = Vector2( 1, 0.991857 )
curve = SubResource( 17 )
script = ExtResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="enemyMovement"]
position = Vector2( 1, -11 )
rotate = false

[node name="HPBar" type="ProgressBar" parent="enemyMovement/PathFollow2D"]
offset_left = -14.0
offset_top = -19.0
offset_right = 66.0
offset_bottom = -5.0
scale = Vector2( 0.343495, 0.356986 )
theme_override_colors/font_color = Color( 1, 0, 0, 1 )

[node name="HurtBox" type="Area2D" parent="enemyMovement/PathFollow2D"]
visible = false
position = Vector2( 3.8147e-06, 0 )
collision_layer = 0
collision_mask = 64
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyMovement/PathFollow2D/HurtBox"]
shape = SubResource( 15 )
disabled = true

[node name="HitBox" type="Area2D" parent="enemyMovement/PathFollow2D"]
visible = false
position = Vector2( 3.8147e-06, 0 )
collision_layer = 16
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyMovement/PathFollow2D/HitBox"]
shape = SubResource( 16 )
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="enemyMovement/PathFollow2D"]
position = Vector2( 3.8147e-06, 0 )
frames = SubResource( 24 )
animation = "idle"
frame = 2
playing = true

[node name="BulletSpawnPath" type="Path2D" parent="."]
curve = SubResource( 23 )
script = ExtResource( 8 )

[node name="bulletSpawnLocation" type="PathFollow2D" parent="BulletSpawnPath"]
position = Vector2( -51.5521, 19.2094 )
rotation = -0.0289248
offset = 22.4759

[connection signal="timeout" from="ApproachTimer" to="." method="_on_ApproachTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="bulletSpawnTimer" to="." method="_on_bulletSpawnTimer_timeout"]
